styles: widening card on mobile screens. fixing alignment of footer content

--- a/ALAB-316.2.1/styles.css
+++ b/ALAB-316.2.1/styles.css
@@ -32,7 +32,7 @@ body {
 .card {
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
-  width: 40%;
+  width: 90%;
   max-width: 28em;
   margin: auto;
   background-color: #fff;
@@ -125,7 +125,7 @@ footer {
 .footer-content {
   display: flex;
   margin-top: 2em;
-  margin-right: 3em;
+  margin-right: 2em;
 }
 
 footer h4 {
@@ -136,4 +136,11 @@ footer h4 {
 .github-logo {
   width:22px;
   height:22px
+}
+
+/* == Desktop Only Styles  */
+@media screen and (min-width: 598px) {
+  .card {
+    width: 40%;
+  }
 }
